--- a/accounts/templates/accounts/signup.html
+++ b/accounts/templates/accounts/signup.html
@@ -1,5 +1,5 @@
 {% extends 'accounts/accounts.html' %}
-{% block title %}BOYO DB / SIGNUP{% endblock %}
+{% block title %} / Sign up{% endblock %}
 
 {% block content %}
 <div class="container-fluid bg-dark">
