--- a/boyoblue/templates/boyoblue/core.html
+++ b/boyoblue/templates/boyoblue/core.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>{% block title %}BOYO DB{% endblock %}</title>
+  <title>BoyoBlue{% block title %}{% endblock %}</title>
   <link rel="stylesheet" href="https://yarnpkg.com/en/package/normalize.css" type="text/css"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono"/>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
