--- a/boyoblue/templates/boyoblue/footer.html
+++ b/boyoblue/templates/boyoblue/footer.html
@@ -2,7 +2,12 @@
   <div class="col-sm-12">
     <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link disabled" href="">created by B. Bean, P. Lavigne, and Z. Munro</a>
+        <p class="nav-link" href="">
+          created by 
+          <a class="disabled" href="">B. Bean</a>, 
+          <a class="disabled" href="">P. Lavigne</a>, and 
+          <a class="disabled" href="">Z. Munro</a>
+        </p>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="">terms of service</a>
