--- a/boyoblue/templates/boyoblue/header.html
+++ b/boyoblue/templates/boyoblue/header.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <div class="col-sm-3">
-      <a href="{% url 'home' %}" class="navbar-brand">BOYO DB</a>
+      <a href="{% url 'home' %}" class="navbar-brand">BoyoBlue</a>
     </div>
     <div class="col-sm-6">
       <div class="input-group input-group-sm">
