--- a/reviews/templates/reviews/create.html
+++ b/reviews/templates/reviews/create.html
@@ -1,4 +1,4 @@
-{% extends 'reviews/reviews.html' %} {% block title %}BOYO DB / POST REVIEW{% endblock %} {% block content %}
+{% extends 'reviews/reviews.html' %} {% block title %} / Create a review{% endblock %} {% block content %}
 <div class="container-fluid bg-dark">
   <div class="card">
     <form action="{% url 'reviews:create' %}" method="post">
