--- a/reviews/templates/reviews/list.html
+++ b/reviews/templates/reviews/list.html
@@ -1,5 +1,5 @@
 {% extends 'reviews/reviews.html' %}
-{% block title %}BOYO DB / REVIEWS{% endblock %}
+{% block title %} / All reviews{% endblock %}
 
 {% block content %}
 <div class="container-fluid bg-dark">
