--- a/accounts/templates/accounts/accounts.html
+++ b/accounts/templates/accounts/accounts.html
@@ -1,9 +1,9 @@
-{% extends 'boyomovies/core.html' %}
-{% block title %}BOYO DB / ACCOUNTS{% endblock %}
+{% extends 'boyoblue/core.html' %}
+{% block title %} / Accounts{% endblock %}
 
 {% block body %}
-  {% include 'boyomovies/header.html' %}
+  {% include 'boyoblue/header.html' %}
   {% block content %}
   {% endblock %}
-  {% include 'boyomovies/footer.html' %}
+  {% include 'boyoblue/footer.html' %}
 {% endblock %}
