--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -1,5 +1,5 @@
 {% extends 'accounts/accounts.html' %}
-{% block title %}BOYO DB / LOGIN{% endblock %}
+{% block title %} / Login{% endblock %}
 
 {% block content %}
 <div class="container-fluid bg-dark">
