--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -1,5 +1,5 @@
 {% extends 'reviews/reviews.html' %}
-{% block title %}BOYO DB / (need movie data){% endblock %}
+{% block title %} / [PLACEHOLDER]{% endblock %}
 
 {% block content %}
 <div class="container-fluid bg-dark">
