--- a/boyoblue/templates/boyoblue/core.html
+++ b/boyoblue/templates/boyoblue/core.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>BoyoBlue{% block title %}{% endblock %}</title>
+  <link rel="icon" type="image/png" href="images/favicon.png" />
   <link rel="stylesheet" href="https://yarnpkg.com/en/package/normalize.css" type="text/css"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono"/>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
