--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -5,9 +5,14 @@
 <div class="container-fluid bg-dark">
   <div class="card" style="width: 18rem;">
     <ul class="list-group list-group-flush">
-      <li class="list-group-item">Movie ID = {{ review.movie_id }}</li>
+      <li class="list-group-item">Api ID = {{ review.api_id }}</li>
     </ul>
+    {% if review.type == 'movie' %}
     <img class="card-img-top" src="https://m.media-amazon.com/images/M/MV5BMTU3MTQyNjQwM15BMl5BanBnXkFtZTgwNDgxNDczNTM@._V1_UX182_CR0,0,182,268_AL_.jpg">
+    {% endif %}
+    {% if review.type == 'song' %}
+    <iframe src="https://open.spotify.com/embed?uri=spotify:track:{{ review.api_id }}" width="300" height="380" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+    {% endif %}
     <div class="card-body">
       <h5 class="card-title">{{ review.title }}</h5>
       <p class="card-text">{{ review.body }}</p>
