--- a/boyoblue/templates/boyoblue/header.html
+++ b/boyoblue/templates/boyoblue/header.html
@@ -4,29 +4,23 @@
       <a href="{% url 'home' %}" class="navbar-brand">BoyoBlue</a>
     </div>
     <div class="col-sm-6">
-      <div class="input-group input-group-sm">
-        <div class="input-group-prepend">
-          <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">all media</button>
-          <div class="dropdown-menu ">
-            <!-- <a class="dropdown-item btn-sm" href="">anime</a> -->
-            <!-- <a class="dropdown-item btn-sm" href="">books</a> -->
-            <!-- <a class="dropdown-item btn-sm" href="">games</a> -->
-            <a class="dropdown-item btn-sm" href="">movies</a>
-            <!-- <a class="dropdown-item btn-sm" href="">music</a> -->
-            <!-- <a class="dropdown-item btn-sm" href="">podcasts</a> -->
-            <a class="dropdown-item btn-sm" href="">television</a>
-            <div role="separator" class="dropdown-divider"></div>
-            <a class="dropdown-item btn-sm" href="">all media</a>
-          </div>
+      <form action="/search/" method="get">
+        <div class="input-group input-group-sm">
+            <div class="input-group-prepend">
+              <select class="custom-select" name="media">
+                <option selected>Music</option>
+                <option value="movies">Movies</option>
+              </select>
+            </div>
+            <input type="text" class="form-control" placeholder="search the media database" name="q">
+            <div class="input-group-append">
+              <button class="btn btn-success" type="submit" id="button-addon2">
+                <i class="fas fa-search" style="font-size: 12px; margin-right: 2px;"></i>
+                search
+              </button>
+            </div>
         </div>
-        <input type="text" class="form-control" placeholder="search the media database">
-        <div class="input-group-append">
-          <button class="btn btn-success" type="button" id="button-addon2">
-            <i class="fas fa-search" style="font-size: 12px; margin-right: 2px;"></i>
-            search
-          </button>
-        </div>
-      </div>
+      </form>
     </div>
     <div class="col-sm-3">
       <ul class="nav navbar-nav justify-content-end">
