--- a/search/templates/search/list.html
+++ b/search/templates/search/list.html
@@ -2,15 +2,20 @@
 {% block title %} / All reviews{% endblock %}
 
 {% block content %}
-<div class="container-fluid bg-dark">
-  <div class="list-group">
+  <div class="container bg-dark">
     {% if results %}
-      {% for result in results %}
-        <p>{{ result.name }} by {{ result.artist }}</p>
-      {% endfor %}
+      <div class="row">
+        {% for result in results %}
+          <div class="card col-md-6">
+            <ul class="list-group list-group-flush">
+              <li class="list-group-item">"{{ result.name }}" by {{ result.artist }}</li>
+            </ul>
+            <iframe src="https://open.spotify.com/embed?uri=spotify:track:{{ result.api_id }}" width=100% height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          </div>
+        {% endfor %}
+      </div>
     {% else %}
       <h1>No results found</h1>
     {% endif %}
   </div>
-</div>
 {% endblock %}
