--- a/boyoblue/templates/boyoblue/header.html
+++ b/boyoblue/templates/boyoblue/header.html
@@ -8,7 +8,7 @@
         <div class="input-group input-group-sm">
             <div class="input-group-prepend">
               <select class="custom-select" name="media">
-                <option selected>Music</option>
+                <option value="songs" selected>Songs</option>
                 <option value="movies">Movies</option>
               </select>
             </div>
