Revamped user authentication system

--- a/boyoblue/templates/boyoblue/core.html
+++ b/boyoblue/templates/boyoblue/core.html
@@ -1,10 +1,12 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>BoyoBlue{% block title %}{% endblock %}</title>
-  <link rel="icon" type="image/png" href="images/favicon.png" />
-  <link rel="stylesheet" href="https://yarnpkg.com/en/package/normalize.css" type="text/css"/>
+  <link rel="icon" type="image/png" href="/static/images/favicon.png"/>
+  <link rel="stylesheet" type="text/css" href="/static/styles/stylesheet.css"/>
+  <link rel="stylesheet" type="text/css" href="https://yarnpkg.com/en/package/normalize.css"/>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto+Mono"/>
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
