--- a/boyoblue/static/styles/stylesheet.css
+++ b/boyoblue/static/styles/stylesheet.css
@@ -1,17 +1,24 @@
-.navbar .dropdown-menu .dropdown-item, .navbar .dropdown-menu .dropdown-header {
+.navbar .dropdown-item, .navbar .dropdown-header, .navbar p {
   font-size: 12px;
   line-height: 24px;
-  height: 24px;
   border: 0px;
   margin: 0px;
   padding: 0 12px 0 12px;
 }
 
-.navbar .dropdown-menu .dropdown-header {
+.navbar .dropdown-header {
   font-size: 12px;
   line-height: 20px;
-  height: 20px;
   font-weight: bold;
+}
+
+.navbar p {
+  font-size: 11px;
+  line-height: 14px;
+}
+
+.navbar i {
+  margin-right: 8px;
 }
 
 .navbar .dropdown-toggle {
