--- a/boyoblue/templates/boyoblue/header.html
+++ b/boyoblue/templates/boyoblue/header.html
@@ -31,7 +31,7 @@
               <img class="rounded gravatar" src="{% gravatar_url user.email 40 %}"/>
             </a>
             <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="/users/{{ user.username }}">
+              <a class="dropdown-item" href="{% url 'users:detail' user.username %}">
                 Signed in as
                 {% if user.first_name or user.last_name %}
                   <b> {{ user.first_name }} {{ user.last_name }}</b>
@@ -39,8 +39,10 @@
                   <b> {{ user.username }}</b>
                 {% endif %}
               </a>
-              {% if not user.is_authenticated %}
-                <p>Your account is unverified.</p>
+              {% if user.is_authenticated %}
+              {% else %}
+                <div class="dropdown-divider"></div>
+                <p>Your account is unverified. To resend your verification email, visit your account settings.</p>
               {% endif %}
               <div class="dropdown-divider"></div>
               <h6 class="dropdown-header">Your lists</h6>
@@ -51,14 +53,14 @@
               <h6 class="dropdown-header">Actions</h6>
               <a class="dropdown-item" href="{% url 'reviews:create' %}">Create review</a>
               <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href="">Account settings</a>
-              <a class="dropdown-item text-danger" href="{% url 'account_logout' %}">Logout</a>
+              <a class="dropdown-item" href=""><i class="fas fa-cog"></i>Account settings</a>
+              <a class="dropdown-item text-danger" href="{% url 'account_logout' %}"><i class="fas fa-sign-out-alt"></i>Logout</a>
             </div>
           </li>
         {% else %}
           <li class="nav-item active">
-            <a role="button" class="btn btn-dark" href="{% url 'account_login' %}">Log in</a>
-            <a role="button" class="btn btn-primary" href="{% url 'account_signup' %}">Sign up</a>
+            <a role="button" class="btn btn-dark" href="{% url 'account_login' %}"><i class="fas fa-sign-in-alt"></i>Log in</a>
+            <a role="button" class="btn btn-primary" href="{% url 'account_signup' %}"><i class="fas fa-user-plus"></i>Sign up</a>
           </li>
         {% endif %}
       </ul>
