Prettify review cards

--- a/reviews/templates/reviews/mediacards/movie.html
+++ b/reviews/templates/reviews/mediacards/movie.html
@@ -1,8 +1,7 @@
 {% extends 'reviews/card.html' %}
 
 {% block title %}
-<p>Movie</p>
+Movie {{ review.api_id }}
 {% endblock %}
 {% block additional-html %}
-<p>With a poster</p>
 {% endblock %}
