--- a/reviews/templates/reviews/card.html
+++ b/reviews/templates/reviews/card.html
@@ -1,14 +1,19 @@
 <div class="card col-md-6">
   <ul class="list-group list-group-flush">
     <li class="list-group-item">
+      <h4>{{ review.score }}/10: {{ review.title }}</h4>
+      <p>Review of
       {% block title %}
       {% endblock %}
+      </p>
       <small>posted on {{ review.date }} by {{ review.author }}</small>
     </li>
+    <li class="list-group-item">
+      {% block additional-html %}
+      {% endblock %}
+    </li>
+    <li class="list-group-item">
+      <p class="mb-1">{{ review.body }}</p>
+    </li>
   </ul>
-  <p class="mb-1">Score : {{ review.score }}/10</p>
-  <p class="mb-1">{{ review.title }}</p>
-  <p class="mb-1">{{ review.body }}</p>
-  {% block additional-html %}
-  {% endblock %}
 </div>
