--- a/reviews/templates/reviews/mediacards/song.html
+++ b/reviews/templates/reviews/mediacards/song.html
@@ -1,8 +1,8 @@
 {% extends 'reviews/card.html' %}
 
 {% block title %}
-<p>Song by Artist</p>
+"{{ media.name }}" by {{ media.artist }}
 {% endblock %}
 {% block additional-html %}
-<p>And a cool image</p>
+<iframe src="https://open.spotify.com/embed?uri=spotify:track:{{ media.api_id }}" width=100% height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
 {% endblock %}
