--- a/search/templates/search/movies.html
+++ b/search/templates/search/movies.html
@@ -1,8 +1,14 @@
-{% extends 'reviews/reviews.html' %}
-{% block title %} / All reviews{% endblock %}
+{% extends 'search/list.html' %}
 
-{% block content %}
-  <div class="container bg-dark">
-    <h1>Searching for movies is currently unimplemented</h1>
+{% block card %}
+<div class="card col-xs-12 col-sm-6 col-md-4 col-lg-3 col-xl-2">
+  <ul class="list-group list-group-flush">
+    <li class="list-group-item">
+      <a href="/reviews/create/movie/{{result.api_id}}">{{ result.title }}</a>
+    </li>
+  </ul>
+  <div class="text-center">
+    <img src="{{ result.poster_image }}" class="rounded">
   </div>
+</div>
 {% endblock %}
