--- a/search/templates/search/songs.html
+++ b/search/templates/search/songs.html
@@ -1,12 +1,13 @@
 {% extends 'search/list.html' %}
 
 {% block card %}
+<div class="card col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
   <ul class="list-group list-group-flush">
     <li class="list-group-item">
-      <a href="/reviews/create/song/{{song.api_id}}">"{{ result.name }}" by {{ result.artist }}</a>
+      <a href="/reviews/create/song/{{result.api_id}}">"{{ result.name }}" by {{ result.artist }}</a>
     </li>
   </ul>
   <iframe src="https://open.spotify.com/embed?uri=spotify:track:{{ result.api_id }}" width=100% height="80"
-          frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
+          frameborder="0" allowtransparency="true"></iframe>
 </div>
 {% endblock %}
