--- a/reviews/templates/reviews/card.html
+++ b/reviews/templates/reviews/card.html
@@ -1,4 +1,4 @@
-<div class="card col-md-6">
+<div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
   <ul class="list-group list-group-flush">
     <li class="list-group-item">
       <h4>{{ review.score }}/10: {{ review.title }}</h4>
