--- a/reviews/templates/reviews/card.html
+++ b/reviews/templates/reviews/card.html
@@ -14,7 +14,7 @@
         {% endblock %}
       </li>
       <li class="list-group-item">
-        <p class="mb-1">{{ review.body }}</p>
+        <p class="mb-1">{{ body }}</p>
       </li>
     </ul>
   </a>
