--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -1,27 +1,12 @@
 {% extends 'reviews/reviews.html' %}
-{% block title %} / [PLACEHOLDER]{% endblock %}
+{% block title %} / Review detail{% endblock %}
 
 {% block content %}
 <div class="container-fluid bg-dark">
-  <div class="card" style="width: 18rem;">
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Api ID = {{ review.api_id }}</li>
-    </ul>
-    {% if review.type == 'movie' %}
-    <img class="card-img-top" src="https://m.media-amazon.com/images/M/MV5BMTU3MTQyNjQwM15BMl5BanBnXkFtZTgwNDgxNDczNTM@._V1_UX182_CR0,0,182,268_AL_.jpg">
-    {% endif %}
-    {% if review.type == 'song' %}
-    <iframe src="https://open.spotify.com/embed?uri=spotify:track:{{ review.api_id }}" width=100% height="80" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe>
-    {% endif %}
-    <div class="card-body">
-      <h5 class="card-title">{{ review.title }}</h5>
-      <p class="card-text">{{ review.body }}</p>
+  <div class="row">
+    <div class="card col-xs-12 col-sm-12 col-md-10 col-lg-8 col-xl-7" style="margin:0 auto;">
+      {% include card %}
     </div>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">Score : {{ review.score }}/10</li>
-      <li class="list-group-item">posted on {{ review.date }}</li>
-      <li class="list-group-item">by {{ review.author }}</li>
-    </ul>
   </div>
 </div>
 {% endblock %}
