--- a/boyoblue/templates/boyoblue/footer.html
+++ b/boyoblue/templates/boyoblue/footer.html
@@ -1,17 +1,4 @@
-<nav class="navbar navbar-dark bg-dark">
-  <div class="col-sm-12">
-    <ul class="nav justify-content-center">
-      <li class="nav-item">
-        <p class="nav-link" href="">
-          created by 
-          <a class="disabled" href="">B. Bean</a>, 
-          <a class="disabled" href="">P. Lavigne</a>, and 
-          <a class="disabled" href="">Z. Munro</a>
-        </p>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link disabled" href="">terms of service</a>
-      </li>
-    </ul>
-  </div>
-</nav>
+<footer class="footer">
+  <p id="footer_credit" class="txt_s">created by B. Bean, P. Lavigne, and Z. Munro</p>
+  <p id="footer_terms" class="txt_s">terms of use</p>
+</footer>
