--- a/boyoblue/templates/boyoblue/header.html
+++ b/boyoblue/templates/boyoblue/header.html
@@ -1,76 +1,60 @@
 {% load gravatar %}
 {% load static %}
-<nav class="navbar navbar-expand-sm navbar-dark bg-dark">
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <div class="col-sm-4">
-      <a href="{% url 'home' %}" class="navbar-brand navbar-brand-boyoblue">
-        <img src="/static/images/logo.svg" width="40" height="40" class="d-inline-block align-top">
-        BoyoBlue
-      </a>
-    </div>
-    <div class="col-sm-4">
-      <form action="/search/" method="get">
-        <div class="input-group">
-            <div class="input-group-prepend">
-              <select class="custom-select" name="media">
-                <option value="songs" selected>Songs</option>
-                <option value="movies">Movies</option>
-              </select>
-            </div>
-            <input type="text" class="form-control" placeholder="search the media database" name="q">
-            <div class="input-group-append">
-              <button class="btn btn-success" type="submit" id="button-addon2">
-                <i class="fas fa-search" style="font-size: 12px; margin-right: 2px;"></i>
-                Search
-              </button>
-            </div>
-        </div>
-      </form>
-    </div>
-    <div class="col-sm-4">
-      <ul class="nav navbar-nav justify-content-end">
-        {% if user.is_authenticated %}
-          <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown">
-              <img class="rounded gravatar" src="{% gravatar_url user.email 40 %}"/>
-            </a>
-            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-              <a class="dropdown-item" href="{% url 'users:detail' user.username %}">
-                Signed in as
-                {% if user.first_name or user.last_name %}
-                  <b> {{ user.first_name }} {{ user.last_name }}</b>
-                {% else %}
-                  <b> {{ user.username }}</b>
-                {% endif %}
-              </a>
-              {% if user.is_authenticated %}
-              {% else %}
-                <div class="dropdown-divider"></div>
-                <p>Your account is unverified. To resend your verification email, visit your account settings.</p>
-              {% endif %}
-              <div class="dropdown-divider"></div>
-              <h6 class="dropdown-header">Your lists</h6>
-              <a class="dropdown-item" href="">Completed</a>
-              <a class="dropdown-item" href="">Watching</a>
-              <a class="dropdown-item" href="">Plan to watch</a>
-              <div class="dropdown-divider"></div>
-              <h6 class="dropdown-header">Actions</h6>
-              <a class="dropdown-item" href="{% url 'reviews:create' %}">Create review</a>
-              <div class="dropdown-divider"></div>
-              <a class="dropdown-item" href=""><i class="fas fa-cog"></i>Account settings</a>
-              <a class="dropdown-item text-danger" href="{% url 'account_logout' %}"><i class="fas fa-sign-out-alt"></i>Logout</a>
-            </div>
-          </li>
-        {% else %}
-          <li class="nav-item active">
-            <a role="button" class="btn btn-outline-light" href="{% url 'account_login' %}"><i class="fas fa-sign-in-alt"></i>Log in</a>
-            <a role="button" class="btn btn-primary" href="{% url 'account_signup' %}"><i class="fas fa-user-plus"></i>Sign up</a>
-          </li>
-        {% endif %}
-      </ul>
-    </div>
+<header class="header">
+  <div id="header_logo">
+    <a href="{% url 'home' %}">
+      <img src="/static/images/logo.svg" height="35px" width="35px">
+    </a>
   </div>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-</nav>
+  
+  <div id="header_brand">
+    <a href="{% url 'home' %}">BoyoBlue</a>
+  </div>
+  
+  <form id="header_search" action="/search/" method="get" >
+    <select id="search_select" name="media">
+      <option value="songs" selected>Songs</option>
+      <option value="movies">Movies</option>
+    </select>
+    <input id="search_text" type="text" placeholder="Search the media database" name="q">
+    <button id="search_submit" type="submit"><i class="fas fa-search"></i>Search</button>
+  </form>
+  
+  <div id="header_account">
+    {% if user.is_authenticated %}
+      <div class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">
+          <img class="rounded gravatar" src="{% gravatar_url user.email 35 %}"/>
+        </a>
+        <div class="dropdown-menu dropdown-menu-right">
+          <a class="dropdown-item" href="{% url 'users:detail' user.username %}">
+            Signed in as
+            {% if user.first_name or user.last_name %}
+              <b> {{ user.first_name }} {{ user.last_name }}</b>
+            {% else %}
+              <b> {{ user.username }}</b>
+            {% endif %}
+          </a>
+          {% if not user.is_authenticated %}
+            <div class="dropdown-divider"></div>
+            <p>Your account is unverified. To resend your verification email, visit your account settings.</p>
+          {% endif %}
+          <div class="dropdown-divider"></div>
+          <h6 class="dropdown-header">Your lists</h6>
+          <a class="dropdown-item" href="">Completed</a>
+          <a class="dropdown-item" href="">Watching</a>
+          <a class="dropdown-item" href="">Plan to watch</a>
+          <div class="dropdown-divider"></div>
+          <h6 class="dropdown-header">Actions</h6>
+          <a class="dropdown-item" href="{% url 'reviews:create' %}">Create review</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" href=""><i class="fas fa-cog"></i>Account settings</a>
+          <a class="dropdown-item text-danger" href="{% url 'account_logout' %}"><i class="fas fa-sign-out-alt"></i>Logout</a>
+        </div>
+      </div>
+    {% else %}
+      <a role="button" id="account_login" href="{% url 'account_login' %}"><i class="fas fa-sign-in-alt"></i>Log in</a>
+      <a role="button" id="account_signup" href="{% url 'account_signup' %}"><i class="fas fa-user-plus"></i>Sign up</a>
+    {% endif %}
+  </div>
+</header>
