--- a/reviews/templates/reviews/reviews.html
+++ b/reviews/templates/reviews/reviews.html
@@ -3,7 +3,9 @@
 
 {% block body %}
   {% include 'boyoblue/header.html' %}
-  {% block content %}
-  {% endblock %}
+  <main class="main">
+    {% block content %}
+    {% endblock %}
+  </main>
   {% include 'boyoblue/footer.html' %}
 {% endblock %}
