--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -2,11 +2,5 @@
 {% block title %} / Review detail{% endblock %}
 
 {% block content %}
-<div class="container-fluid bg-dark">
-  <div class="row">
-    <div class="card col-xs-12 col-sm-12 col-md-10 col-lg-8 col-xl-7" style="margin:0 auto;">
-      {% include card %}
-    </div>
-  </div>
-</div>
+<p>PLACEHOLDER</p>
 {% endblock %}
