--- a/reviews/templates/reviews/list.html
+++ b/reviews/templates/reviews/list.html
@@ -1,22 +1,12 @@
-{% extends 'reviews/reviews.html' %}
+{% extends 'boyoblue/core.html' %}
 {% block title %} / All reviews{% endblock %}
 
-{% block content %}
-
-<div class="container-fluid bg-dark">
+{% block body %}
   {% if reviews %}
-  <div class="row">
     {% for review, review_card, media, body in reviews %}
-    <div class="card col-xs-12 col-sm-6 col-md-6 col-lg-4 col-xl-3">
-      <a href="{% url 'reviews:detail' review.id %}">
-        {% include review_card %}
-      </a>
-    </div>
+      {% include review_card %}
     {% endfor %}
-  </div>
   {% else %}
-  <h1>There are no reviews to display</h1>
+    <h1>There are no reviews to display</h1>
   {% endif %}
-</div>
-
 {% endblock %}
