--- a/boyoblue/templates/boyoblue/header.html
+++ b/boyoblue/templates/boyoblue/header.html
@@ -22,36 +22,11 @@
   
   <div id="header_account">
     {% if user.is_authenticated %}
-      <div class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle" role="button" data-toggle="dropdown">
-          <img class="rounded gravatar" src="{% gravatar_url user.email 35 %}"/>
-        </a>
-        <div class="dropdown-menu dropdown-menu-right">
-          <a class="dropdown-item" href="{% url 'users:detail' user.username %}">
-            Signed in as
-            {% if user.first_name or user.last_name %}
-              <b> {{ user.first_name }} {{ user.last_name }}</b>
-            {% else %}
-              <b> {{ user.username }}</b>
-            {% endif %}
-          </a>
-          {% if not user.is_authenticated %}
-            <div class="dropdown-divider"></div>
-            <p>Your account is unverified. To resend your verification email, visit your account settings.</p>
-          {% endif %}
-          <div class="dropdown-divider"></div>
-          <h6 class="dropdown-header">Your lists</h6>
-          <a class="dropdown-item" href="">Completed</a>
-          <a class="dropdown-item" href="">Watching</a>
-          <a class="dropdown-item" href="">Plan to watch</a>
-          <div class="dropdown-divider"></div>
-          <h6 class="dropdown-header">Actions</h6>
-          <a class="dropdown-item" href="{% url 'reviews:create' %}">Create review</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item" href=""><i class="fas fa-cog"></i>Account settings</a>
-          <a class="dropdown-item text-danger" href="{% url 'account_logout' %}"><i class="fas fa-sign-out-alt"></i>Logout</a>
-        </div>
-      </div>
+      <a href="{% url 'users:detail' user.username %}">
+        <img class="gravatar" src="{% gravatar_url user.email 35 %}"/>
+      </a>
+      <a role="button" id="account_settings" href=""><i class="fas fa-cog"></i>Settings</a>
+      <a role="button" id="account_logout" href="{% url 'account_logout' %}"><i class="fas fa-sign-out-alt"></i>Log out</a>
     {% else %}
       <a role="button" id="account_login" href="{% url 'account_login' %}"><i class="fas fa-sign-in-alt"></i>Log in</a>
       <a role="button" id="account_signup" href="{% url 'account_signup' %}"><i class="fas fa-user-plus"></i>Sign up</a>
