--- a/boyoblue/templates/boyoblue/header.html
+++ b/boyoblue/templates/boyoblue/header.html
@@ -13,8 +13,9 @@
   
   <form id="header_search" action="/search/" method="get" >
     <select id="search_select" name="media">
-      <option value="songs" selected>Songs</option>
-      <option value="movies">Movies</option>
+      <option value="movies" selected>Movies</option>
+      <option value="songs">Songs</option>
+      <option value="books">Books</option>
     </select>
     <input id="search_text" type="text" placeholder="Search the media database" name="q">
     <button id="search_submit" type="submit"><i class="fas fa-search"></i>Search</button>
