--- a/reviews/templates/reviews/media/book.html
+++ b/reviews/templates/reviews/media/book.html
@@ -6,7 +6,7 @@
     <p>{{ review.score }}/10: {{ review.title }}</p>
   </div>
   <div class="r_l_book_card_text text r_l_card_text">
-    <p>A review of {{ media.title }}</p><br>
+    <p>A review of {{ media.title }} by {{ media.author }}</p><br>
     <p>{{ body }}</p><br>
     <p>Posted on {{ review.date }} by {{ review.author }}</p>
   </div>
