--- a/reviews/templates/reviews/create.html
+++ b/reviews/templates/reviews/create.html
@@ -1,4 +1,6 @@
-{% extends 'reviews/reviews.html' %} {% block title %} / Create a review{% endblock %} {% block content %}
+{% extends 'boyoblue/core.html' %}
+{% block title %} / Create a review{% endblock %}
+{% block body %}
 <div class="container-fluid bg-dark">
   <div class="card">
     <form action="{% url 'reviews:create' %}" method="post">
