--- a/boyoblue/templates/boyoblue/header.html
+++ b/boyoblue/templates/boyoblue/header.html
@@ -14,6 +14,7 @@
   <form id="header_search" action="/search/" method="get" >
     <select id="search_select" name="media">
       <option value="movies" selected>Movies</option>
+      <option value="television">Television</option>
       <option value="songs">Songs</option>
       <option value="books">Books</option>
     </select>
