Add artists and albums

--- a/boyoblue/templates/boyoblue/header.html
+++ b/boyoblue/templates/boyoblue/header.html
@@ -16,6 +16,8 @@
       <option value="movies" selected>Movies</option>
       <option value="television">Television</option>
       <option value="songs">Songs</option>
+      <option value="albums">Albums</option>
+      <option value="artists">Artists</option>
       <option value="books">Books</option>
     </select>
     <input id="search_text" type="text" placeholder="Search the media database" name="q">
