--- a/boyoblue/static/styles/stylesheet.css
+++ b/boyoblue/static/styles/stylesheet.css
@@ -301,3 +301,37 @@ html, body {
 .s_l_song_card_text {
   grid-area: s_l_song_card_text;
 }
+
+.s_l_album_card {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-areas: "s_l_album_card_media s_l_album_card_title";
+  grid-template-columns: 80px 1fr;
+  grid-template-rows: 80px;
+}
+.s_l_album_card_media {
+  grid-area: s_l_album_card_media;
+}
+.s_l_album_card_title {
+  grid-area: s_l_album_card_title;
+}
+.s_l_album_card_text {
+  grid-area: s_l_album_card_text;
+}
+
+.s_l_artist_card {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-areas: "s_l_artist_card_media s_l_artist_card_title";
+  grid-template-columns: 80px 1fr;
+  grid-template-rows: 80px;
+}
+.s_l_artist_card_media {
+  grid-area: s_l_artist_card_media;
+}
+.s_l_artist_card_title {
+  grid-area: s_l_artist_card_title;
+}
+.s_l_artist_card_text {
+  grid-area: s_l_artist_card_text;
+}
