Fix artist review card

--- a/reviews/templates/reviews/media/artist.html
+++ b/reviews/templates/reviews/media/artist.html
@@ -8,7 +8,7 @@
     <p>{{ review.score }}/10: {{ review.title }}</p>
   </div>
   <div class="r_l_artist_card_text text r_l_card_text">
-    <p>A review of "{{ media.name }}" by {{ media.artist }}</p><br>
+    <p>A review of the artist "{{ media.name }}"</p><br>
     <p>{{ body }}</p><br>
     <p>Posted on {{ review.date }} by {{ review.author }}</p>
   </div>
