Searches cannot be empty

--- a/boyoblue/templates/boyoblue/header.html
+++ b/boyoblue/templates/boyoblue/header.html
@@ -20,7 +20,7 @@
       <option value="artists">Artists</option>
       <option value="books">Books</option>
     </select>
-    <input id="search_text" type="text" placeholder="Search the media database" name="q">
+    <input id="search_text" type="text" placeholder="Search the media database" name="q" required>
     <button id="search_submit" type="submit"><i class="fas fa-search"></i>Search</button>
   </form>
   
