--- a/reviews/templates/reviews/media/artist.html
+++ b/reviews/templates/reviews/media/artist.html
@@ -10,6 +10,6 @@
   <div class="r_l_artist_card_text text r_l_card_text">
     <p>A review of the artist "{{ media.name }}"</p><br>
     <p>{{ body }}</p><br>
-    <p>Posted on {{ review.date }} by {{ review.author }}</p>
+    <p>Posted {{ review.date|timesince }} ago by {{ review.author }}</p>
   </div>
 </div>
