Remove Zack from footer :(

--- a/boyoblue/templates/boyoblue/footer.html
+++ b/boyoblue/templates/boyoblue/footer.html
@@ -1,4 +1,4 @@
 <footer class="footer">
-  <p id="footer_credit" class="txt_s">created by <a class="footer_github" href="https://github.com/pataman3">B. Bean</a>, <a class="footer_github" href="https://github.com/Peter-Lavigne">P. Lavigne</a>, and <a class="footer_github" href="https://github.com/">Z. Munro</a></p>
+  <p id="footer_credit" class="txt_s">created by <a class="footer_github" href="https://github.com/pataman3">B. Bean</a> and <a class="footer_github" href="https://github.com/Peter-Lavigne">P. Lavigne</a></p>
   <p id="footer_terms" class="txt_s">terms of use</p>
 </footer>
