--- a/boyoblue/templates/boyoblue/footer.html
+++ b/boyoblue/templates/boyoblue/footer.html
@@ -1,4 +1,7 @@
 <footer class="footer">
-  <p id="footer_credit" class="txt_s">created by <a class="footer_github" href="https://github.com/pataman3">B. Bean</a> and <a class="footer_github" href="https://github.com/Peter-Lavigne">P. Lavigne</a></p>
-  <p id="footer_terms" class="txt_s">terms of use</p>
+  <p id="footer_credit" class="txt_s">created by
+    <a class="footer_github" href="https://github.com/pataman3">B. Bean</a>
+    and <a class="footer_github" href="https://github.com/Peter-Lavigne">P. Lavigne</a>
+  </p>
+  <p id="footer_about_us" class="txt_s"><a class="footer_about_us_link" href="/about-us">about us</a></p>
 </footer>
